commit new images

--- a/online_log/static/replay.html
+++ b/online_log/static/replay.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="replay/css/github-markdown-dark.css">
 
 <head>
-    <title>chatdev demo </title>
+    <title>LLMSmartAudit demo </title>
     <link rel="icon" type="image/png" href="figures/ceo.png">
 </head>
 
@@ -14,7 +14,7 @@
 
     <div id="operation">
         <div id="title" style="display: block;position: relative;height: 100px;">
-            <img src="figures/chatdev.png" style="width: 364px;height: 128px; position: relative;top:40px;left:75px;">
+            <img src="figures/logo.jpeg" style="width: 264px;height: 98px; position: relative;top:40px;left:130px;">
             <p style="color:aliceblue; font-size: larger;font-weight: bolder;position: relative;top:20px;left:40px;text-shadow: 0px 0px 0px rgb(252, 252, 252);">
                 Communicative Agents for Software Development</p>
         </div>
@@ -50,6 +50,18 @@
                 <div class="info">
                     <label for="version_updates" style="position: relative;">🔨version_updates</label>
                     <p id="version_updates"></p>
+                </div>
+                <div class="info">
+                    <label for="num_total_tokens" style="position: relative;">⁉️num_total_tokens</label>
+                    <p id="num_total_tokens"></p>
+                </div>
+                <div class="info">
+                    <label for="cost" style="position: relative;">💰cost</label>
+                    <p id="cost"></p>
+                </div>
+                <div class="info">
+                    <label for="duration" style="position: relative;">🕑duration</label>
+                    <p id="duration"></p>
                 </div>
                 <div class="info">
                     <label for="num_code_files" style="position: relative;">📃num_code_files</label>
@@ -92,18 +104,6 @@
                 <div class="info">
                     <label for="num_completion_tokens" style="position: relative;">❗num_completion_tokens</label>
                     <p id="num_completion_tokens"></p>
-                </div>
-                <div class="info">
-                    <label for="num_total_tokens" style="position: relative;">⁉️num_total_tokens</label>
-                    <p id="num_total_tokens"></p>
-                </div>
-                <div class="info">
-                    <label for="cost" style="position: relative;">💰cost</label>
-                    <p id="cost"></p>
-                </div>
-                <div class="info">
-                    <label for="duration" style="position: relative;">🕑duration</label>
-                    <p id="duration"></p>
                 </div>
 
             </div>
