--- a/online_log/static/index.html
+++ b/online_log/static/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="d-flex justify-content-center">
-        <img src="static/figures/title.png" alt="ChatDev Title" id="title-image" style="width: 100%; max-width: 300px;">
+        <img src="static/figures/logo.jpeg" alt="ChatDev Title" id="title-image" style="width: 264px;height: 98px;">
     </div>
     <div style="display: flex; width:auto;justify-content: center;align-items: center;">
         <div style="width: 30%;">
